--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
   "endOfLine": "lf",
   "semi": false,
-  "singleQuote": false,
+  "singleQuote": true,
+  "useTabs": true,
   "tabWidth": 2,
-  "trailingComma": "es5"
+  "trailingComma": "all"
 }
