--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-helmet": "^5.2.1"
     },
     "devDependencies": {
+        "gh-pages": "^2.0.1",
         "prettier": "^1.18.2"
     },
     "keywords": [
@@ -32,7 +33,8 @@
         "format": "prettier --write 'src/**/*.{js,jsx}'",
         "start": "npm run develop",
         "serve": "gatsby serve",
-        "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+        "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+        "deploy": "gatsby build --prefix-paths && gh-pages -d public"
     },
     "repository": {
         "type": "git",
