--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "typeface-ibm-plex-sans": "0.0.61"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
