--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "devDependencies": {
         "babel-plugin-styled-components": "^1.10.1",
+        "gatsby-plugin-react-svg": "^2.1.1",
         "gatsby-plugin-styled-components": "^3.1.0",
         "prettier": "^1.18.2",
         "styled-components": "^4.3.2"
