--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
         "react-helmet": "^5.2.1"
     },
     "devDependencies": {
+        "babel-eslint": "9.0.0",
+        "eslint": "^5.16.0",
+        "eslint-config-prettier": "^5.0.0",
+        "eslint-loader": "^2.1.2",
+        "eslint-plugin-import": "^2.17.3",
+        "eslint-plugin-react": "^7.14.0",
+        "gatsby-plugin-eslint": "^2.0.5",
         "prettier": "^1.18.2"
     },
     "keywords": [
