--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "prettier": "^1.18.2",
         "styled-components": "^4.3.2",
         "stylelint": "^10.1.0",
+        "stylelint-config-prettier": "^5.2.0",
         "stylelint-config-standard": "^18.3.0",
         "stylelint-config-styled-components": "^0.1.1",
         "stylelint-processor-styled-components": "^1.8.0"
