--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
         "babel-plugin-styled-components": "^1.10.1",
         "gatsby-plugin-react-svg": "^2.1.1",
         "gatsby-plugin-styled-components": "^3.1.0",
+        "gatsby-plugin-stylelint": "^3.2.0",
         "prettier": "^1.18.2",
         "styled-components": "^4.3.2",
         "stylelint": "^10.1.0",
         "stylelint-config-prettier": "^5.2.0",
         "stylelint-config-standard": "^18.3.0",
         "stylelint-config-styled-components": "^0.1.1",
-        "stylelint-processor-styled-components": "^1.8.0"
+        "stylelint-processor-styled-components": "^1.8.0",
+        "stylelint-webpack-plugin": "^0.10.5"
     },
     "keywords": [
         "deriv",
