add eslint to test

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
         "eslint": "DEBUG=eslint:cli-engine eslint 'src/**/*.js'",
         "start": "npm run develop",
         "serve": "gatsby serve",
-        "test": "npm run stylelint",
+        "test": "npm run stylelint && npm run eslint",
         "deploy": "npm run build && gh-pages -d public -b master",
         "deploy-dev": "npm run build --prefix-paths && gh-pages -d public",
         "deploy-branch": "PATH_PREFIX=/deriv-com/br/$BRANCH_NAME npm run build --prefix-paths && gh-pages -d public -e br/$BRANCH_NAME"
