--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "gatsby": "^2.9.4",
         "gatsby-image": "^2.1.4",
         "gatsby-plugin-manifest": "^2.1.1",
+        "gatsby-plugin-nprogress": "^2.1.0",
         "gatsby-plugin-offline": "^2.1.3",
+        "gatsby-plugin-portal": "^1.0.7",
         "gatsby-plugin-react-helmet": "^3.0.12",
         "gatsby-plugin-sharp": "^2.1.5",
         "gatsby-source-filesystem": "^2.0.39",
