--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
         "gatsby": "^2.9.4",
         "gatsby-image": "^2.1.4",
         "gatsby-plugin-manifest": "^2.1.1",
-        "gatsby-plugin-nprogress": "^2.1.0",
         "gatsby-plugin-offline": "^2.1.3",
         "gatsby-plugin-portal": "^1.0.7",
         "gatsby-plugin-react-helmet": "^3.0.12",
@@ -48,7 +47,7 @@
     ],
     "license": "Apache License 2.0",
     "scripts": {
-        "build": "npm run test && gatsby build",
+        "build": "npm run test && gatsby build --prefix-paths",
         "develop": "gatsby develop",
         "format": "prettier --write '**/*.js' '*.js'",
         "stylelint": "stylelint 'src/**/*.js' --formatter verbose",
@@ -57,8 +56,8 @@
         "serve": "gatsby serve",
         "test": "npm run stylelint && npm run eslint",
         "deploy": "npm run build && gh-pages -d public -b master",
-        "deploy-dev": "npm run build --prefix-paths && gh-pages -d public",
-        "deploy-branch": "PATH_PREFIX=/deriv-com/br/$BRANCH_NAME npm run build --prefix-paths && gh-pages -d public -e br/$BRANCH_NAME"
+        "deploy-dev": "npm run build && gh-pages -d public",
+        "deploy-branch": "PATH_PREFIX=/deriv-com/br/$branch_name npm run build && gh-pages -d public -e br/$branch_name"
     },
     "repository": {
         "type": "git",
