--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
         "gatsby-source-filesystem": "^2.0.39",
         "gatsby-transformer-sharp": "^2.1.21",
         "gh-pages": "^2.0.1",
+        "i18next": "^17.0.4",
+        "i18next-browser-languagedetector": "^3.0.1",
+        "i18next-xhr-backend": "^3.0.0",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-helmet": "^5.2.1",
+        "react-i18next": "^10.11.2",
         "typeface-ibm-plex-sans": "0.0.61"
     },
     "devDependencies": {
