--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "author": "Deriv",
     "dependencies": {
         "@rebass/grid": "^6.0.0",
+        "commander": "^2.20.0",
+        "crc-32": "^1.2.0",
         "extend": "^3.0.2",
         "gatsby": "^2.9.4",
         "gatsby-image": "^2.1.4",
@@ -50,7 +52,7 @@
     ],
     "license": "Apache License 2.0",
     "scripts": {
-        "build": "npm run test && gatsby build --prefix-paths",
+        "build": "gatsby build --prefix-paths",
         "develop": "gatsby develop",
         "format": "prettier --write '**/*.js' '*.js'",
         "stylelint": "stylelint 'src/**/*.js' --formatter verbose",
