--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     ],
     "license": "Apache License 2.0",
     "scripts": {
-        "build": "gatsby build --prefix-paths",
+        "build": "npm run test && gatsby build --prefix-paths",
         "develop": "gatsby develop",
         "format": "prettier --write '**/*.js' '*.js'",
         "stylelint": "stylelint 'src/**/*.js' --formatter verbose",
