--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "gatsby-source-filesystem": "^2.0.39",
         "gatsby-transformer-sharp": "^2.1.21",
         "gh-pages": "^2.0.1",
+        "js-cookie": "^2.2.0",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
@@ -33,6 +34,7 @@
         "gatsby-plugin-styled-components": "^3.1.0",
         "gatsby-plugin-stylelint": "^3.2.0",
         "prettier": "^1.18.2",
+        "query-string": "^6.8.1",
         "styled-components": "^4.3.2",
         "stylelint": "^10.1.0",
         "stylelint-config-prettier": "^5.2.0",
