--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "gatsby-plugin-portal": "^1.0.7",
         "gatsby-plugin-react-helmet": "^3.0.12",
         "gatsby-plugin-sharp": "^2.1.5",
+        "gatsby-plugin-sitemap": "^2.2.1",
         "gatsby-source-filesystem": "^2.0.39",
         "gatsby-transformer-sharp": "^2.1.21",
         "gh-pages": "^2.0.1",
