os detect cookie storage utm and affiliate functionality

--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
         "gatsby-source-filesystem": "^2.0.39",
         "gatsby-transformer-sharp": "^2.1.21",
         "gh-pages": "^2.0.1",
-        "js-cookie": "^2.2.0",
         "i18next": "^17.0.4",
+        "js-cookie": "^2.2.0",
+        "moment": "^2.24.0",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
