--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
         "gatsby-plugin-eslint": "^2.0.5",
         "gatsby-plugin-react-svg": "^2.1.1",
         "gatsby-plugin-styled-components": "^3.1.0",
-        "gatsby-plugin-stylelint": "^3.2.0",
         "prettier": "^1.18.2",
         "styled-components": "^4.3.2",
         "stylelint": "^10.1.0",
@@ -55,11 +54,10 @@
         "build": "npm run test && gatsby build --prefix-paths",
         "develop": "gatsby develop",
         "format": "prettier --write '**/*.js' '*.js'",
-        "stylelint": "stylelint 'src/**/*.js' --formatter verbose",
         "eslint": "DEBUG=eslint:cli-engine eslint 'src/**/*.js'",
         "start": "npm run develop",
         "serve": "gatsby serve",
-        "test": "npm run stylelint && npm run eslint",
+        "test": "npm run eslint",
         "deploy": "npm run build && gh-pages -d public -b master",
         "deploy-dev": "npm run build && gh-pages -d public",
         "deploy-branch": "PATH_PREFIX=/deriv-com/br/$branch_name npm run build && gh-pages -d public -e br/$branch_name"
