--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "gatsby-transformer-sharp": "^2.1.21",
         "gh-pages": "^2.0.1",
         "i18next": "^17.0.4",
+        "match-sorter": "^3.1.1",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
