GTM initial setup

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "extend": "^3.0.2",
         "gatsby": "^2.9.4",
         "gatsby-image": "^2.1.4",
+        "gatsby-plugin-google-tagmanager": "^2.1.4",
         "gatsby-plugin-manifest": "^2.2.1",
         "gatsby-plugin-offline": "^2.2.4",
         "gatsby-plugin-portal": "^1.0.7",
@@ -19,8 +20,8 @@
         "gatsby-transformer-sharp": "^2.1.21",
         "gh-pages": "^2.0.1",
         "i18next": "^17.0.4",
-        "match-sorter": "^3.1.1",
         "js-cookie": "^2.2.0",
+        "match-sorter": "^3.1.1",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
