--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "gatsby-plugin-offline": "^2.2.4",
         "gatsby-plugin-portal": "^1.0.7",
         "gatsby-plugin-react-helmet": "^3.0.12",
+        "gatsby-plugin-robots-txt": "^1.5.0",
         "gatsby-plugin-sharp": "^2.1.5",
         "gatsby-plugin-sitemap": "^2.2.1",
         "gatsby-source-filesystem": "^2.0.39",
