--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
         "gatsby-image": "^2.2.8",
         "gatsby-plugin-google-tagmanager": "^2.1.5",
         "gatsby-plugin-manifest": "^2.2.4",
-        "gatsby-plugin-offline": "^2.2.4",
         "gatsby-plugin-portal": "^1.0.7",
         "gatsby-plugin-react-helmet": "^3.1.3",
+        "gatsby-plugin-remove-serviceworker": "^1.0.0",
         "gatsby-plugin-robots-txt": "^1.5.0",
         "gatsby-plugin-sharp": "^2.2.9",
         "gatsby-plugin-sitemap": "^2.2.5",
