--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     ],
     "license": "Apache License 2.0",
     "scripts": {
-        "build": "npm run test && gatsby clean && gatsby build",
+        "build": "gatsby clean && gatsby build",
         "develop": "gatsby develop",
         "format": "prettier --write '**/*.js' '*.js'",
         "stylelint": "stylelint 'src/**/*.js' --formatter verbose",
