--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-react": "^7.14.3",
         "gatsby-plugin-eslint": "^2.0.5",
+        "gatsby-plugin-force-trailing-slashes": "^1.0.4",
         "gatsby-plugin-react-svg": "^2.1.2",
         "gatsby-plugin-styled-components": "^3.1.2",
         "gatsby-plugin-stylelint": "^3.2.0",
