use perfect scrollbar

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "react-dom": "^16.11.0",
         "react-helmet": "^5.2.1",
         "react-i18next": "^10.13.1",
-        "tt-react-custom-scrollbars": "^4.2.1-tt2",
+        "react-perfect-scrollbar": "^1.5.3",
+        "simplebar-react": "^2.0.2-corejs2-1",
         "typeface-ibm-plex-sans": "0.0.75"
     },
     "devDependencies": {
