--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react-dom": "^16.11.0",
         "react-helmet": "^5.2.1",
         "react-i18next": "^10.13.1",
+        "react-responsive": "^8.0.1",
         "typeface-ibm-plex-sans": "0.0.75"
     },
     "devDependencies": {
