--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react-dom": "^16.11.0",
         "react-helmet": "^5.2.1",
         "react-i18next": "^10.13.1",
+        "react-lottie": "^1.2.3",
         "react-perfect-scrollbar": "^1.5.3",
         "react-responsive": "^8.0.1",
         "typeface-ibm-plex-sans": "0.0.75"
