--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "formik": "^1.5.8",
         "gatsby": "^2.17.1",
         "gatsby-image": "^2.2.29",
+        "gatsby-plugin-breadcrumb": "^6.2.2",
         "gatsby-plugin-google-tagmanager": "^2.1.15",
         "gatsby-plugin-manifest": "^2.2.23",
         "gatsby-plugin-react-helmet": "^3.1.13",
