--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "crc-32": "^1.2.0",
         "extend": "^3.0.2",
         "formik": "^1.5.8",
-        "gatsby": "^2.17.1",
+        "gatsby": "^2.18.17",
         "gatsby-image": "^2.2.29",
         "gatsby-plugin-google-tagmanager": "^2.1.15",
         "gatsby-plugin-manifest": "^2.2.23",
@@ -23,6 +23,7 @@
         "js-cookie": "^2.2.1",
         "match-sorter": "^4.0.2",
         "prop-types": "^15.7.2",
+        "pure-react-carousel": "^1.24.1",
         "react": "^16.11.0",
         "react-dom": "^16.11.0",
         "react-helmet": "^5.2.1",
