--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
         "react-dom": "^16.11.0",
         "react-helmet": "^5.2.1",
         "react-i18next": "^10.13.1",
+        "react-id-swiper": "^2.4.0",
         "react-lottie": "^1.2.3",
         "react-perfect-scrollbar": "^1.5.3",
         "react-responsive": "^8.0.1",
+        "swiper": "^5.3.0",
         "typeface-ibm-plex-sans": "0.0.75"
     },
     "devDependencies": {
