--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,7 +118,8 @@ commands:
 jobs:
   test:
     docker:
-      - image: circleci/node:9.11.2-stretch
+      #- image: circleci/node:9.11.2-stretch
+      - image: node:12.16.1-stretch
     steps:
       - git_checkout_from_cache
       - npm_install_from_cache
@@ -131,7 +132,8 @@ jobs:
 
   build_push_staging:
     docker:
-      - image: circleci/node:9.11.2-stretch
+      #- image: circleci/node:9.11.2-stretch
+      - image: node:12.16.1-stretch
     steps:
       - git_checkout_from_cache
       - npm_install_from_cache
@@ -141,7 +143,8 @@ jobs:
       
   build_push_production:
     docker:
-      - image: circleci/node:9.11.2-stretch
+      #- image: circleci/node:9.11.2-stretch
+      - image: node:12.16.1-stretch
     steps:
       - git_checkout_from_cache
       - npm_install_from_cache
@@ -154,13 +157,15 @@ jobs:
 
   deploy_staging:
     docker:
-      - image: circleci/node:9.11.2-stretch
+      #- image: circleci/node:9.11.2-stretch
+      - image: node:12.16.1-stretch
     steps:
       - k8s_deploy
       
   deploy_production:
     docker:
-      - image: circleci/node:9.11.2-stretch
+      #- image: circleci/node:9.11.2-stretch
+      - image: node:12.16.1-stretch
     steps:
       - k8s_deploy:
           k8s_svc_name: "production-deriv-com"
