edit: edited docker image tag to 12.4-stretch in test job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,7 +118,7 @@ commands:
 jobs:
   test:
     docker:
-      - image: circleci/node:lts-stretch
+      - image: circleci/node:12.4-stretch
       #- image: node:12.16.1-stretch
     steps:
       - git_checkout_from_cache
