--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ commands:
             - node-
       - run:
           name: Install npm packages
-          command: npm install
+          command: npm ci
       - save_cache:
           key: node-{{ checksum "package-lock.json" }}
           paths:
