--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ commands:
       #      - node-
       - run:
           name: Install npm packages
-          command: npm ci
+          command: npm install
       #- save_cache:
       #    key: node-{{ checksum "package-lock.json" }}
       #    paths:
@@ -118,7 +118,7 @@ commands:
 jobs:
   test:
     docker:
-      - image: circleci/node:13.8.0-stretch
+      - image: circleci/node:9.8.0-stretch
         environment:
           NODE_OPTIONS=--max_old_space_size=4096
     steps:
