--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,7 +118,7 @@ commands:
 jobs:
   test:
     docker:
-      - image: circleci/node:9.8.0-stretch
+      - image: circleci/node:lts-stretch
         environment:
           NODE_OPTIONS=--max_old_space_size=4096
     steps:
