--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "crc-32": "^1.2.0",
         "extend": "^3.0.2",
         "formik": "^1.5.8",
-        "gatsby": "^2.17.1",
+        "gatsby": "^2.19.19",
+        "gatsby-background-image": "^0.10.1",
         "gatsby-image": "^2.2.29",
         "gatsby-plugin-breadcrumb": "^6.2.2",
         "gatsby-plugin-google-tagmanager": "^2.1.15",
