--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,7 +120,8 @@ jobs:
     docker:
       - image: circleci/node:lts-stretch
         environment:
-          NODE_OPTIONS=--max_old_space_size=4096
+          - NODE_OPTIONS=--max_old_space_size=4096
+          - GATSBY_CPU_COUNT=2
     steps:
       - git_checkout_from_cache
       - npm_install_from_cache
