--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,7 +154,7 @@ workflows:
   build_and_push_test:
     jobs:
       - test:
-          context: binary-frontend-artifact-deploy  # using context to retrieve shared secret from circle ci
+          context: binary-frontend-deploy  # using context to retrieve shared secret from circle ci
   build_and_push_dev:
     jobs:
       - test:
