--- a/deriv.com.conf
+++ b/deriv.com.conf
@@ -1,32 +1,32 @@
-map $http_cf_ipcountry $redirected_url {
-    BE /eu;
-    BG /eu;
-    CZ /eu;
-    DK /eu;
-    DE /eu;
-    EE /eu;
-    IE /eu;
-    EL /eu;
-    ES /eu;
-    FR /eu;
-    HR /eu;
-    IT /eu;
-    CY /eu;
-    LV /eu;
-    LT /eu;
-    LU /eu;
-    HU /eu;
-    MT /eu;
-    NL /eu;
-    AT /eu;
-    PL /eu;
-    PT /eu;
-    RO /eu;
-    SI /eu;
-    SK /eu;
-    FI /eu;
-    SE /eu;
-}
+#map $http_cf_ipcountry $redirected_url {
+#    BE /eu;
+#    BG /eu;
+#    CZ /eu;
+#    DK /eu;
+#    DE /eu;
+#    EE /eu;
+#    IE /eu;
+#    EL /eu;
+#    ES /eu;
+#    FR /eu;
+#    HR /eu;
+#    IT /eu;
+#    CY /eu;
+#    LV /eu;
+#    LT /eu;
+#    LU /eu;
+#    HU /eu;
+#    MT /eu;
+#    NL /eu;
+#    AT /eu;
+#    PL /eu;
+#    PT /eu;
+#    RO /eu;
+#    SI /eu;
+#    SK /eu;
+#    FI /eu;
+#    SE /eu;
+#}
 
 server {
     listen 80;
@@ -46,9 +46,9 @@ server {
     }
 
     location / {
-        if ($http_cf_ipcountry) {
-            return 301 https://$host$redirected_url$request_uri;
-        }
+        #if ($http_cf_ipcountry) {
+        #    return 301 https://$host$redirected_url$request_uri;
+        #}
         root   /usr/share/nginx/html;
         index  index.html index.htm;
     }
