--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "gatsby-plugin-breadcrumb": "^6.2.2",
         "gatsby-plugin-google-tagmanager": "^2.1.15",
         "gatsby-plugin-manifest": "^2.2.23",
+        "gatsby-plugin-netlify-cache": "^1.2.0",
         "gatsby-plugin-react-helmet": "^3.1.13",
         "gatsby-plugin-remove-serviceworker": "^1.0.0",
         "gatsby-plugin-robots-txt": "^1.5.0",
